# kubernetes-workshop

./: .gitignore  README.md  docker-compose.yml
cv-module/: Dockerfile  main.py  pyproject.toml
fase2/: start-nfs-server.sh
fase3/: cv-deploy.yaml  ha-deploy.yaml  ha-storage.yaml  mqtt-deploy.yaml  mqtt-storage.yaml
fase3/soluciones/: cv-deploy.yaml  ha-deploy.yaml  ha-storage.yaml  mqtt-deploy.yaml  mqtt-storage.yaml
